added image upload file processing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ logging.file = logs/zbra-go-app.log
 # Multipart Configuration
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
+
+storage.basePath = media
+storage.imagePath = images
+storage.thumbnailExtension = .thumbnail
