--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+    maven {
+        url "https://repository.apache.org/content/repositories/snapshots"
+    }
 }
 
 dependencies {
@@ -34,6 +37,9 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.apache.commons:commons-lang3:3.4')
+	compile('org.apache.commons:commons-imaging:1.0-SNAPSHOT')
+    compile('net.coobird:thumbnailator:0.4.8')
+    compile('commons-codec:commons-codec:1.9')
 	compile('commons-io:commons-io:2.5')
 	compile('joda-time:joda-time:2.8.2')
 	runtime('org.hsqldb:hsqldb')
