--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 }
 
 dependencies {
+	// Spring
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-cache')
@@ -33,8 +34,17 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-devtools')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
+
+	// Utils
 	compile('org.apache.commons:commons-lang3:3.4')
 	compile('joda-time:joda-time:2.8.2')
+
+	// DB
 	runtime('org.hsqldb:hsqldb')
+
+	// webjars
+	compile "org.webjars:bootstrap:3.3.7"
+	compile 'org.webjars.bower:font-awesome:4.3.0'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
