--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ logging.file = logs/zbra-go-app.log
 # Multipart Configuration
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
+
+# Thymeleaf configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.suffix=.html
