--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
 	// webjars
 	compile "org.webjars:bootstrap:3.3.7"
-	compile 'org.webjars.bower:font-awesome:4.3.0'
+	compile "org.webjars:jquery:2.1.4"
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
