several fixes and added MediaStreamServlet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # App General Configuration
 spring.application.name = ZBRAGO
 spring.main.show-banner = false
+server.port=8080
 
 # Database Configuration
 spring.datasource.url = jdbc:hsqldb:file:repository/zbra-go-db;crypt_key=a8adfb22292515d7c6194136ae5e4be3;crypt_type=blowfish
