Changing deprecated conf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # App General Configuration
 spring.application.name = ZBRAGO
-spring.main.show-banner = false
+spring.main.banner-mode = off
 server.port=8080
 
 # Database Configuration
